--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 			<header id="header">
 				<div class="inner">
 					<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
-					<h1><strong>I am Strata</strong>, a super simple<br />
-					responsive site template freebie<br />
+					<h1><strong>I am Ravi</strong>, a Software geek<br />
+					by profession<br />
 					crafted by <a href="http://html5up.net">HTML5 UP</a>.</h1>
 				</div>
 				<nav id="nav" class="nav-slide">
