--- a/index.html
+++ b/index.html
@@ -20,9 +20,8 @@
 			<header id="header">
 				<div class="inner">
 					<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
-					<h1><strong>I am Ravi</strong>, a Software geek<br />
-					by profession<br />
-					crafted by <a href="http://html5up.net">HTML5 UP</a>.</h1>
+					<h1><p>I am <strong>Ravi</strong>, a Software geek by profession.</p>
+					</h1>
 				</div>
 				<nav id="nav" class="nav-slide">
 					<ul>
