--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 			<header id="header">
 				<div class="inner">
 					<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
-					<h1><p>I am <strong>Ravi</strong>, a Software geek by profession.</p>
+					<h1><p>I am <strong>Ravi</strong>, a Software crafts by profession.</p>
 					</h1>
 				</div>
 				<nav id="nav" class="nav-slide">
