--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <!--
 	Strata by HTML5 UP
-	html5up.net | @ajlkn
+	html5up.net
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
@@ -20,7 +20,7 @@
 			<header id="header">
 				<div class="inner">
 					<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
-					<h1><p>I am <strong>Ravi</strong>, a Software crafts by profession.</p>
+					<h1><p><strong>SOFTWARE CRAFTSMAN /</br> SOLUTION ARCHITECT </strong></p>
 					</h1>
 				</div>
 				<nav id="nav" class="nav-slide">
@@ -40,10 +40,10 @@
 				<!-- One -->
 					<section id="about-section"">
 						<header class="major">
-							<h2>Ipsum lorem dolor aliquam ante commodo<br />
-							magna sed accumsan arcu neque.</h2>
+							<h1>DYNAMIC + INNOVATIVE + TECHNOLOGY LEADER </h1>
 						</header>
-						<p>Accumsan orci faucibus id eu lorem semper. Eu ac iaculis ac nunc nisi lorem vulputate lorem neque cubilia ac in adipiscing in curae lobortis tortor primis integer massa adipiscing id nisi accumsan pellentesque commodo blandit enim arcu non at amet id arcu magna. Accumsan orci faucibus id eu lorem semper nunc nisi lorem vulputate lorem neque cubilia.</p>
+						<p>I am a hands-on software architect with 18 years of proven experience in leading an engineering organizations to build high performing scalable, secure, robust and predictable enterprise solutions to satisfy business initiatives. Charting a strategic path for the business, building a great team and developing complex, user-focused applications cleanly is why I do what I do. I provide leadership and guidance to coach, motivate and lead team members. I have proven ability to bring initiatives to timely completion and create a roadmap for long term success.
+When it comes to leading and managing teams, my rare mix of business and technology insight, people skills, leadership abilities and deep technical knowledge are an effective combination. I’m great at building teams of highly talented developers, setting the technical direction, and creating a culture with a high level of autonomy, responsibility, recognition and reward. My teams have a reputation for delivering projects on time to an extremely high standard.</p>
 						<ul class="actions">
 							<li><a href="#" class="button">Learn More</a></li>
 						</ul>
